# hse-software-development-aa-arch

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/: ci.yml
.github/workflows/: ci.yml
docs/: acceptance_plan.md  algorithms.md  architecture.md  contribution_instruction.md  report.md  requirements.md  style.md  testing.md
experiment_environment/configs/: config.json
experiment_environment/include/: benchmark.hpp  config_loader.hpp  experiment_manager_base.hpp  experiment_manager_google.hpp  experiment_manager_naive.hpp
experiment_environment/src/: config.json  irsq_benchmark.cpp
include/: Hello.hpp
rsq_library/include/: down_segment_tree.hpp  fenwick_tree.hpp  irsq.hpp  lazy_prefix_sum.hpp  naive.hpp  prefix_sum.hpp  segment_tree.hpp  sharded_lazy_prefix_sum.hpp  sharded_prefix_sum.hpp  sqrt_rsq.hpp  treap.hpp
rsq_library/tests/: CMakeLists.txt  irsq_test.cpp  main.cpp
rsq_library/tests/include/: irsq_better_test.hpp  irsq_random_test.hpp  irsq_test.hpp
rsq_library/utils/: consistency_checker.hpp  random_data_generator.hpp
src/: Hello.cpp  main.cpp
test/: test_main.cpp
tests/: HelloTest.cpp
